# git2wp

./: .env.example2  .gitignore  .llmcontrol.yaml  Dockerfile  Makefile  README.md  TESTING.md  TODO.md  TODO.txt  babel.config.js  docker-compose.yml  docker-entrypoint.sh  index.html  jest.config.js  jest.setup.js  package.json  server-frontend.js  server.js  server.refactored.js  src.txt  start.sh  stop.sh  test-settings.js
config/: config.js
e2e/: git-scanning.spec.js  git2wp-clean.spec.mjs  git2wp.spec.mjs  global-setup.js  global-teardown.js  wordpress-publish.spec.js
e2e/api/: git.repos.spec.js  wordpress.publish.spec.js
e2e/config/: test.env
e2e/helpers/: api.helper.js  test-utils.js
e2e/test-data/: test-cases.yaml
git2wp_cli/: .coverage  .gitignore  Makefile  README.md  __init__.py  cli.py  pyproject.toml  setup.py  test_git2text.py  test_git2text_cli.py
git2wp_cli/docs/: USAGE.md
git2wp_cli/git2wp/: __init__.py  __main__.py  git2text.py
git2wp_cli/tests/: __init__.py  test_basic.py
public/: index.html  settings.html  simple_server.py
public/css/: dark-theme.css  main.css  settings-panel.css  styles.css
public/js/: app.js  config-manager.js
routes/: config.js
test/: example.test.js  index.test.js  jest.config.js  scan-test.js  simple.test.cjs  wordpress-helper.test.mjs
test/config/: test-setup.js
test/e2e/: app-flow.test.js  basic.test.js  debug-login.test.js
test/helpers/: test-utils.js  wordpress-helper.js
tests/: app.test.js  setupJest.js  setupTests.js
tests/__mocks__/: node-fetch.js
utils/: logger.js
views/: index.html  index.html.bak
(+5 files in other folders)
