[tool.poetry]
name = "git2wp"
version = "0.1.0"
description = "A command-line tool for publishing Git repository changes to WordPress."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "git2wp"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.7.0"
bandit = "^1.7.5"
types-requests = "^2.31.0.10"
types-python-dotenv = "^1.0.0.20240518"

[tool.poetry.scripts]
git2wp = "git2wp.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=git2wp --cov-report=term-missing"

[tool.coverage.run]
source = ["git2wp"]
omit = ["**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise ImportError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'pass',
    'raise ImportError',
    'raise NotImplementedError',
]
